<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/loginbackground">

    <ScrollView
        android:id="@+id/id_scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/id_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/id_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                app:srcCompat="@drawable/janjlogo" />

            <TextView
                android:id="@+id/id_signupLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:paddingTop="30dp"
                android:text="Sign Up"
                android:textColor="#08683F"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_requiredLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/required" />

            <LinearLayout
                android:id="@+id/id_nameLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="60dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/id_firstnameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:paddingBottom="3dp"
                    android:paddingRight="5dp"
                    android:text="@string/firstname" />

                <TextView
                    android:id="@+id/id_lastnameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/lastname" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_nameInfoInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="0dp"
                android:paddingRight="10dp">

                <EditText
                    android:id="@+id/id_firstNameInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:paddingRight="5dp" />

                <EditText
                    android:id="@+id/id_lastNameInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:paddingLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_gradeInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="30dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/id_gradeLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:text="@string/gradelevel" />

                <EditText
                    android:id="@+id/id_gradeInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded"
                    android:ems="3"
                    android:gravity="center"
                    android:inputType="number"
                    android:padding="10dp"
                    android:maxLength="2"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_highschoolSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="40dp">

                <TextView
                    android:id="@+id/id_highschoolLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/highschool" />

                <LinearLayout
                    android:id="@+id/id_highschoolSearchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:id="@+id/id_highschoolSearcher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded"
                        android:padding="10dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_cityInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="30dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/id_cityLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/city" />

                <EditText
                    android:id="@+id/id_cityInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:inputType="textPersonName"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_phoneInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="40dp">

                <TextView
                    android:id="@+id/id_phoneNumLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="Enter phone number (10 digits)" />

                <EditText
                    android:id="@+id/id_phoneNumInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded"
                    android:ems="10"
                    android:inputType="number"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_emailInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/id_emailLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/id_emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_passwordCreation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="30dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/id_passwordCreateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/id_passInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_passwordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="30dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/id_passwordConfirmLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/confirm" />

                <EditText
                    android:id="@+id/id_passConfirmInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_signupPortal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="40dp"
                android:paddingBottom="40dp">

                <Button
                    android:id="@+id/id_signupUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded2"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="Sign Up"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_backToLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="40dp">

                <TextView
                    android:id="@+id/id_backToLoginLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:paddingRight="40dp"
                    android:text="Already have an account?"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/id_backtoLoginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded2"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="Sign In"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
